--- a/app/src/main/res/layout/list_item_git_user.xml
+++ b/app/src/main/res/layout/list_item_git_user.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="72dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="16dp">
 
         <ImageView
