--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorBlack">#555555</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dark_grey">#424242</color>
 </resources>
