--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -46,43 +46,47 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+        android:paddingLeft="5dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="horizontal"
+        android:paddingRight="@dimen/md_keylines"
+        android:paddingTop="@dimen/md_keylines">
+
+        <TextView
+            android:id="@+id/display_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/git_username"
+            android:layout_marginRight="5dp"
+            android:text="@string/username"/>
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/git_username"/>
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingLeft="@dimen/article_keylines"
+            android:orientation="vertical"
             android:paddingRight="@dimen/md_keylines"
             android:paddingTop="@dimen/md_keylines">
 
             <TextView
-                android:id="@+id/display_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/git_username"
-                android:text="@string/username"/>
-
-            <TextView
-                android:id="@+id/username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/git_username"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingLeft="@dimen/article_keylines"
-            android:paddingRight="@dimen/md_keylines"
-            android:paddingTop="@dimen/md_keylines">
-
-            <TextView
-                android:id="@+id/profiel_url"
+                android:id="@+id/profiel1_url"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/git_username"
@@ -95,21 +99,17 @@
                 android:textColor="?attr/colorAccent"
                 android:layout_marginBottom="@dimen/md_keylines"
                 android:layout_marginTop="@dimen/md_keylines" />
-
         </LinearLayout>
-
-
-        <Button
-            android:id="@+id/share_button"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="@string/share"
-            android:textColor="@android:color/white"
-            android:theme="@style/shareButton"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:elevation="8dp"/>
-
-    </android.support.v4.widget.NestedScrollView>
-
+            <Button
+                android:id="@+id/share_button"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="@string/share"
+                android:textColor="@android:color/white"
+                android:theme="@style/shareButton"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:elevation="8dp"/>
+        </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
