--- a/app/src/main/res/layout/list_item_git_user.xml
+++ b/app/src/main/res/layout/list_item_git_user.xml
@@ -1,23 +1,24 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="@dimen/card_height"
-    android:layout_gravity="center"
-    android:layout_marginBottom="@dimen/md_keylines"
-    android:layout_marginLeft="@dimen/md_keylines"
-    android:layout_marginRight="@dimen/md_keylines"
+    android:layout_margin="2dp"
     android:foreground="?attr/selectableItemBackground">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="6dp"
+            android:paddingTop="6dp">
 
                 <ImageView
                     android:id="@+id/profile_image"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/card_image_height"
                     android:scaleType="centerCrop"
+                    android:layout_margin="4dp"
                     tools:src="@drawable/a"
                     />
 
@@ -25,15 +26,12 @@
                     android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/card_title_height"
-                    android:layout_alignBottom="@+id/profile_image"
-                    android:layout_marginLeft="@dimen/md_keylines"
-                    android:layout_marginTop="@dimen/md_keylines"
-                    android:layout_marginBottom="@dimen/md_keylines"
-                    android:layout_marginRight="@dimen/md_keylines"
+                    android:layout_below="@id/profile_image"
+                    android:layout_margin="@dimen/md_keylines"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textColor="@color/dark_grey"
                     android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     android:ellipsize="end"
                     android:singleLine="true"/>
 
